created initial architecture, and db related things

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">QNotes</string>
+    <string name="title_activity_show_note">ShowNoteActivity</string>
 </resources>
