--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,13 @@
 <resources>
     <string name="app_name">QNotes</string>
     <string name="title_activity_show_note">ShowNoteActivity</string>
-    <string name="title_activity_main2">Main2Activity</string>
+    <string name="title_activity_main2">Q-Notes</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Tutaj zrób liste</string>
 </resources>
